--- a/Misc/Progression/2018/October/10-17-18.md
+++ b/Misc/Progression/2018/October/10-17-18.md
@@ -31,6 +31,9 @@ for x in [1,2,3]:
   for y in [3,1,4]:
     if (x != y):
       combs.append((x, y))
+
+combs
+-> [(1, 3), (1, 4), (2, 3), (2, 1), (2, 4), (3, 1), (3, 4)]
 ```
 
 ## Python Sets
@@ -46,6 +49,81 @@ symmetric difference
 
 ```python
 basket = {'apple', 'orange', 'apple', 'pear', 'orange', 'banana'}
+
+# Show that duplicated have been removed
 print(basket)
 -> {'orange', 'banana', 'pear','apple'}
+
+# Fast Membership Testing
+'orange' in basket
+-> True
+
+'crabgrass' in basket
+-> False
+
+# Demonstrate set operations
+a = set('abracadabra')
+b = set('alacazam')
+
+# Unique letters in a
+a
+-> {'a', 'r', 'b', 'c', 'd'}
+
+# letters in a but not in b (difference)
+a - b
+-> {'r', 'd', 'b'}
+
+# letters in a or b or both (union)
+a | b
+-> {'a', 'c', 'r', 'd', 'b', 'm', 'z', 'l'}
+
+# letters in both a and b (intersection)
+a & b
+-> {'a', 'c'}
+
+# letters in a or b, but not both (symmetric difference)
+a ^ b
+-> {'r', 'd', 'b', 'm', 'z', 'l'}
+```
+
+* Just like lists, set comprehensions are also supported
+
+```python
+a = {x for x in 'abracadabra' if x not in 'abc'}
+a
+-> {'r', 'd'}
+```
+
+## Python Recursion
+* Iterative Algorithm Example:
+
+```python
+houses = ["Eric's house", "Kenny's house", "Kyle's house", "Stan's house"]
+
+def deliver_presents_iteratively():
+  for house in houses:
+    print("Delivering presents to", house)
+```
+
+* Recursive Algorithm Example:
+
+```python
+houses = ["Eric's house", "Kenny's house", "Kyle's house", "Stan's house"]
+
+# Each function call represents an elf doing his work
+def deliver_presents_recursively(houses):
+  # Worker elf doing his work
+  if len(houses) == 1:
+    house = house[0]
+    print("Delivering presents to", house)
+
+  # Manager elf doing his work
+  else:
+    mid = len(houses) // 2
+    first_half = houses[:mid]
+    second_half = houses[mid:]
+
+    # Divides his work among two elves
+    deliver_presents_recursively(first_half)
+    deliver_presents_recursively(second_half)
 ```
