Finished - Tree Traversal

--- a/Misc/Progression/2018/October/10-18-18.md
+++ b/Misc/Progression/2018/October/10-18-18.md
@@ -1,7 +1,7 @@
 # October 18th, 2018
 What I learned on October 18th, 2018
 
-# Python Looping Techniques
+## Python Looping Techniques
 * When looping through dictionaries, the key and corresponding value can be
 retrieved at the same time using the items() method.
 * Example
