--- a/Misc/Progression/2018/October/10-22-18.md
+++ b/Misc/Progression/2018/October/10-22-18.md
@@ -1,7 +1,7 @@
 # October 22nd, 2018
 What I learned in October 22nd, 2018
 
-# STAR (Situation, Task, Action, Result)
+## STAR (Situation, Task, Action, Result)
 * A strategy for responding to competency-focused questions, which typically
 start out with phrases such as "Tell me about a time when..." and "Share an
 example of a situation"
@@ -14,4 +14,4 @@ example of a situation"
 * Action
   * Describe the specific action you took to complete the task
 * Result
-  * Close with the result of your efforts 
+  * Close with the result of your efforts
